Consolidate SSZKZGProof/KZGProof and SSZKZGCommitment/KZGCommitment